--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-azmi (0.2.0) stable; urgency=medium
+azmi (0.2.0-1) stable; urgency=medium
 
   * Introduced new commandline parser
   * Implemented getblob command
@@ -7,7 +7,7 @@ azmi (0.2.0) stable; urgency=medium
 
  -- SRE-PRG <NA@NA.com>  Mon, 03 Feb 2020 15:34:41 +0100
 
-azmi (0.1.0) stable; urgency=medium
+azmi (0.1.0-1) stable; urgency=medium
 
   * Initial release
   * Commands: gettoken, setblob
