--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azmi (0.3.0-1) stable; urgency=medium
+
+  * TBD
+
+ -- SRE-PRG <NA@NA.com>  TBA
+
 azmi (0.2.0-1) stable; urgency=medium
 
   * Introduced new commandline parser
