--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azmi (0.5.0-1) stable; urgency=medium
+
+  * TBA
+
+ -- SRE-PRG <NA@NA.com>  TBA
+
 azmi (0.4.0-1) stable; urgency=medium
 
   * Implemented new command: getcertificate
