--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azmi (0.4.1-1) stable; urgency=medium
+
+  * Bug fix - azmi enters endless loop if no identity on a VM
+
+ -- SRE-PRG <NA@NA.com>  Thu, 16 Apr 2020 18:27:52 +0200
+
 azmi (0.4.0-1) stable; urgency=medium
 
   * Implemented new command: getcertificate
