--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+azmi (0.6.0) stable; urgency=medium
+
+* TBD
+* Full list of issues: https://github.com/SRE-PRG/azmitool/milestone/7?closed=1
+
+ -- SRE-PRG <NA@NA.com>  TBD
+
 azmi (0.5.0-1) stable; urgency=medium
 
   Released in scope of MSFT Hackathon 2020 event
